clean up code and fix z-index

--- a/styles/satelite_animation.css
+++ b/styles/satelite_animation.css
@@ -1,21 +1,20 @@
 /* page */
-
 main {
     /* position: relative; */
     /* perspective: 20rem; */
-
     timeline-scope: --heroTrigger, --aboutTrigger, --sateliteTrigger;
 }
+
 
 /* hero + wrapper */
 
 /* wrapper */
 #heroWrapper {
+    /* Change this value for the "length of the hero scroll animation */
     height: 150svh;
     view-timeline-name: --heroTrigger;
 
-    transform-style: preserve-3d;
-
+    /* transform-style: preserve-3d; */
 }
 
 /* hero */
@@ -24,29 +23,22 @@ main {
     height: 100svh;
     top: 0;
 
-    transform-style: preserve-3d;
-}
-
-.hero-content {
-    transform-style: preserve-3d;
-
+    /* transform-style: preserve-3d; */
 }
 
 /* .hero-content {
-
+    transform-style: preserve-3d;
 } */
 
 
 /* section about */
 #about {
     view-timeline-name: --aboutTrigger;
-
 }
 
 /* section satelite info */
 #satelite {
     view-timeline-name: --sateliteTrigger;
-
 }
 
 
@@ -54,9 +46,6 @@ main {
 
 /* wrapper */
 .sateliteWrapper {
-    /* display: none; */
-    /* background: hotpink; */
-
     perspective: 20rem;
 
     position: fixed;
@@ -66,7 +55,7 @@ main {
     transform-style: preserve-3d;
     z-index: 1;
 
-    /* animation-name: zIndexSatelite; */
+    animation-name: zIndexSatelite;
     animation-timeline: --heroTrigger;
     animation-range: exit-crossing 0% entry-crossing 100%;
     animation-fill-mode: both;
@@ -84,7 +73,6 @@ main {
     align-items: center;
 
     transform-style: preserve-3d;
-
 }
 
 
@@ -95,20 +83,12 @@ main {
     width: var(--sateliteWidth);
     height: var(--sateliteHeight);
 
-    /* top: 50%; */
-    /* top: calc(50% + var(--sateliteHeight)/2); */
-    /* left: calc(50% - var(--sateliteWidth)/2); */
-
     transform-style: preserve-3d;
-    /* transform: translateY(100%) translateZ(100px); */
 
     animation-name: rotateSatelite;
     animation-timeline: --heroTrigger;
     animation-range: exit-crossing 0% entry-crossing 100%;
     animation-fill-mode: both;
-
-    /* transform: translateZ(3rem); */
-
 
 }
 
@@ -124,8 +104,7 @@ main {
     }
 
     100% {
-        transform: rotateY(360deg) translateZ(-15rem) ;
-
+        transform: rotateY(180deg) translateZ(-15rem) ;
     }
 }
 
@@ -134,10 +113,10 @@ main {
 @keyframes zIndexSatelite {
     0% {
         z-index: 0;
-    }
+    } 50% {
+        z-index: 0;
 
-    50% {
-
+    } 51% {
         z-index: 1;
     }
 }
